# tagentacle-py-inferencemux

./: README.md  pyproject.toml  tagentacle.toml
tagentacle_py_inferencemux/: __init__.py  mux.py
tests/: test_mux.py
