[project]
name = "tagentacle-py-inferencemux"
version = "0.1.0"
description = "Agent SDK — Inbox, InferenceMux"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
